-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.633 2009-09-28 18:00:25 jluis Exp $
-----------------------------------------------------------------------------------------

2009-09-28	jluis
	* x2sys/x2sys_merge.c:	Improved updating algorithm for detected cases where
				where it was failing badly.

2009-09-27	pwessel
	* gmt_init.c:		Bug in the parsing of -Jg<lon>/<lat>/<radius>/<lat>.
	* spotter/backtracker.c	When -L is set, -mo must be turned on automatically
				even if -m is not set.
	
2009-09-25	pwessel
	* gmtconvert.c:		The -S option failed for actual matches; the 2009/5/26
				change screwed that up.  Now fixed and tested.
	* spotter/rotconverter.c	New option -E to reduce stage pole opening
					angles by <fact> [0.5] (to get half-spreading rates)

2009-09-24	pwessel
	* gmt_grdio.c:		GMT_read_img did not apply swab if little-endian arch.

2009-09-24	remko
	* configure.ac:		Fixed bug with -rpath

2009-09-22	pwessel
	* misc/kml2gmt.c:		Attempt to parse feature description (if present in KML)
	* misc/gmt2kml.c:		Attempt to write feature description (if present in segment header)
	* mgd77/mgd77sniffer.c:		SEGV when an array index was allowed to become -1

-----------------------------------------------------------------------------------------
2009-09-20	pwessel
	* GMT 4.5.1 finalized and released
-----------------------------------------------------------------------------------------

2009-09-19	pwessel
	* psxy.c:		Added 4 new custom symbols (90-degree triangle in 4 quadrants)

2009-09-17	pwessel
	* x2sys/x2sys_get.c:	The -L option failed if list contained file extensions
2009-09-15	pwessel
	* x2sys/x2sys_solve.c:	Did not allocate array for weights.
	* pswiggle.c:		Incorrectly computed distances with -Jx<scale>d.

2009-09-13	pwessel
	* misc/gmt2kml.c:	Avoid mixing stdout/GMT_stdout as Windoze is Windoze.
	* misc/kml2gmt.c:	Avoid mixing stdout/GMT_stdout as Windoze is Windoze.

2009-09-12	pwessel